Trying to fix image on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,9 +79,8 @@ body {
   padding-left: 10px;
   padding-top: 2.5px;
   padding-bottom: 2.5px;
-  max-width: 960px;
+  max-width: auto;
   max-height: 540px;
-  overflow: hidden;
 }
 
 .main {
